--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "bcryptjs": "^3.0.3",
+    "googleapis": "^169.0.0",
     "next": "16.0.8",
     "prisma": "^6.19.1",
     "react": "19.2.1",
